--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,30 +1,47 @@
-/* app css stylesheet */
 
-.menu {
-  list-style: none;
-  border-bottom: 0.1em solid black;
-  margin-bottom: 2em;
-  padding: 0 0 0.5em;
+.chat {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: stretch;
+    height: 100vh;
+    padding: 1em;
+    box-sizing: border-box;
 }
 
-.menu:before {
-  content: "[";
+.message-list {
+    padding: 1em;
+    border: dashed 2px black;
+    flex-grow: 1;
+    overflow: auto;
 }
 
-.menu:after {
-  content: "]";
+.message {
+    margin-bottom: 0.5em;
 }
 
-.menu > li {
-  display: inline;
+.message--system {
+    color: silver;
+    font-size: 0.8em;
 }
 
-.menu > li:before {
-  content: "|";
-  padding-right: 0.3em;
+.link {
+    font-size: small;
+    margin-left: 1.5em;
 }
 
-.menu > li:nth-child(1):before {
-  content: "";
-  padding: 0;
+.user-info {
+    margin-bottom: 1em;
+}
+
+.composer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.message-area {
+    flex-grow: 1;
+    margin: 1.5em 2em;
 }
