--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@
 html(ng-app="myApp")
   head
     meta(charset='utf8')
+    meta(name='viewport', content='width=device-width')
     base(href='/')
     title Super Fantastic Chatt App
     link(rel='stylesheet', href='/css/app.css')
